--- a/Drawee/Drawee.csproj
+++ b/Drawee/Drawee.csproj
@@ -98,10 +98,6 @@
       <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Pastebin, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Pastebin-Api.1.0.4.9\lib\net40\Pastebin.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Collections.Immutable, Version=1.1.36.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Collections.Immutable.1.1.36\lib\portable-net45+win8+wp8+wpa81\System.Collections.Immutable.dll</HintPath>
@@ -109,6 +105,7 @@
     </Reference>
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Reflection.Metadata, Version=1.0.21.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Reflection.Metadata.1.0.21\lib\portable-net45+win8\System.Reflection.Metadata.dll</HintPath>
       <Private>True</Private>
@@ -131,8 +128,10 @@
     <Compile Include="BL\Drawer.cs" />
     <Compile Include="BL\DrawerService.cs" />
     <Compile Include="BL\Generation.cs" />
+    <Compile Include="BL\JsonStorageService.cs" />
     <Compile Include="BL\PairingService.cs" />
-    <Compile Include="BL\Result.cs" />
+    <Compile Include="BL\DrawingPair.cs" />
+    <Compile Include="BL\UIException.cs" />
     <Compile Include="Controls\IconCheckbox.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
